--- a/packer/ansible/roles/dell/files/wsmanConfig.json
+++ b/packer/ansible/roles/dell/files/wsmanConfig.json
@@ -1,13 +1,11 @@
 {
 	"dell":{
 		
-		"configServerPath": "/smi/config/service",
-		"wsmanCallbackUri": "http://172.31.128.1:9988/api/1.1/wsmanCallback/_IDENTIFIER_",
+		"configServerPath": "/api/smi/uri",
+        "wsmanCallbackUri": "http://172.31.128.1:9988/api/2.0/wsmanCallback/_IDENTIFIER_",
 		
  		"services":{
- 			
- 		
-			"firmwareUpdate":{
+        		"firmwareUpdate":{
 				"host": "http://100.68.124.107:8080",
 				"endpoints":{
 					"apiVersion": "/v1/duse/version",
