--- a/test/requirements.txt
+++ b/test/requirements.txt
@@ -20,6 +20,7 @@ requests==2.9.0
 setuptools==33.1.1
 # urllib3 1.20 breaks CIT test, specify version as a temp solution
 urllib3==1.19.1
+ucsmsdk==0.9.2.0
 
 # WARNING: do not just replace this file with "pip freeze > requirements.txt".
 # You need to keep the following line as is! (freeze will turn it into
