--- a/packer/ansible/roles/remoterepos/tasks/main.yml
+++ b/packer/ansible/roles/remoterepos/tasks/main.yml
@@ -28,8 +28,8 @@
     - on-tools
     - on-imagebuilder
 
-- name: Reset to the branch specified
-  shell: git reset --hard {{ branch }}
+- name: Reset to master
+  shell: git reset --hard master
   when: branch is defined
   ignore_errors: yes
   args:
@@ -45,6 +45,15 @@
     - on-wss
     - on-tools
     - on-imagebuilder
+
+- name: Reset to the branch specified
+  shell: git reset --hard {{ branch }}
+  when: branch is defined
+  ignore_errors: yes
+  args:
+    chdir: "{{ ansible_env.HOME }}/src/{{ item }}"
+  with_items:
+    - on-http
 
 - name: Npm install Repos
   npm: path="{{ ansible_env.HOME }}/src/{{ item }}"
