--- a/packer/ansible/roles/remoterepos/tasks/main.yml
+++ b/packer/ansible/roles/remoterepos/tasks/main.yml
@@ -78,6 +78,11 @@
   shell: "npm install html-pdf"
   args:
     chdir: "{{ ansible_env.HOME }}/src/on-http"
+    
+- name: Npm install bootprint
+  shell: "npm install bootprint"
+  args:
+    chdir: "{{ ansible_env.HOME }}/src/on-http"
 
 - name: Render 1.1 API docs for local reference
   shell: "npm run apidoc"
