--- a/test/requirements.txt
+++ b/test/requirements.txt
@@ -19,6 +19,7 @@ requests==2.9.0
 setuptools==33.1.1
 # urllib3 1.20 breaks CIT test, specify version as a temp solution
 urllib3==1.19.1
+exrex=0.10.4
 
 # WARNING: do not just replace this file with "pip freeze > requirements.txt".
 # You need to keep the following line as is! (freeze will turn it into
