--- a/packer/ansible/roles/dell/files/wsmanConfig.json
+++ b/packer/ansible/roles/dell/files/wsmanConfig.json
@@ -1,36 +1,37 @@
 {
 	"dell":{
-		
+
 		"configServerPath": "/api/smi/uri",
-        "wsmanCallbackUri": "http://172.31.128.1:9988/api/2.0/wsmanCallback/_IDENTIFIER_",
-		
- 		"services":{
- 			
- 		
+		"wsmanCallbackUri": "http://172.31.128.1:9988/api/2.0/wsmanCallback/_IDENTIFIER_",
+
+		"services":{
+
 			"firmwareUpdate":{
-				"host": "http://100.68.124.107:8080",
+				"host": "http://100.64.23.35:46010",
 				"endpoints":{
-					"apiVersion": "/v1/duse/version",
-					"uci": "/v1/duse/uci/?address",
-					"downloader" : "/v1/duse/downloader?fileName=Catalog.xml.gz&fileUrl=ftp.dell.com/catalog&targetLocation=/fwRepo/" ,
-					"comparer": "/v1/duse/comparer/",
-					"customRepo":  "/v1/duse/comparer/custom",
-					"updater":    "/v1/duse/updater/",
-					"callbackUri": "http://100.68.124.106:9988/api/1.1/wsmanCallback/_IDENTIFIER_"
+					"apiVersion": "/api/1.0/server/firmware/version",
+					"uci": "/api/1.0/server/firmware/uci/",
+					"downloader" : "/api/1.0/server/firmware/downloader",
+					"comparer": "/api/1.0/firmware/server/comparer/",
+					"customRepo":  "/api/1.0/firmware/server/comparer/custom",
+					"updater":    "/api/1.0/firmware/server/updater/",
+					"callbackUri": "http://172.31.128.1:9988/api/1.1/wsmanCallback/_IDENTIFIER_"
 				}
 			},
 
 
-          "powerThermalMonitoring":{
-	        
-        	 "host": "http://100.64.23.35:46019",
-        	  "endpoints" : {
-		           "apiVersion": "/api/1.0/version",
-		           "powerthermal": "/api/1.0/powerthermal"
-		       
-	          }
-		   }
+			"powerThermalMonitoring":{
 
- 		}
-    }
+				"host": "http://100.64.23.35:46019",
+				"endpoints" : {
+					"apiVersion": "/api/1.0/version",
+					"powerthermal": "/api/1.0/powerthermal"
+
+				}
+			}
+
+		}
+
+
+	}
 }
