--- a/packer/ansible/roles/dell/files/wsmanConfig.json
+++ b/packer/ansible/roles/dell/files/wsmanConfig.json
@@ -2,36 +2,7 @@
 	"dell":{
 
 		"configServerPath": "/api/smi/uri",
-		"wsmanCallbackUri": "http://172.31.128.1:9988/api/2.0/wsmanCallback/_IDENTIFIER_",
-
-		"services":{
-
-			"firmwareUpdate":{
-				"host": "http://100.64.23.35:46010",
-				"endpoints":{
-					"apiVersion": "/api/1.0/server/firmware/version",
-					"uci": "/api/1.0/server/firmware/uci/",
-					"downloader" : "/api/1.0/server/firmware/downloader",
-					"comparer": "/api/1.0/firmware/server/comparer/",
-					"customRepo":  "/api/1.0/firmware/server/comparer/custom",
-					"updater":    "/api/1.0/firmware/server/updater/",
-					"callbackUri": "http://172.31.128.1:9988/api/1.1/wsmanCallback/_IDENTIFIER_"
-				}
-			},
-
-
-			"powerThermalMonitoring":{
-
-				"host": "http://100.64.23.35:46019",
-				"endpoints" : {
-					"apiVersion": "/api/1.0/version",
-					"powerthermal": "/api/1.0/powerthermal"
-
-				}
-			}
-
-		}
-
+		"wsmanCallbackUri": "http://172.31.128.1:9988/api/2.0/wsmanCallback/_IDENTIFIER_"
 
 	}
 }
