--- a/packer/ansible/roles/remoterepos/tasks/main.yml
+++ b/packer/ansible/roles/remoterepos/tasks/main.yml
@@ -7,7 +7,7 @@
   sudo: yes
 
 - name: Get RackHD from source
-  git: repo=https://github.com/dell-smi/rackhd
+  git: repo=https://github.com/rackhd/rackhd
        dest="{{ ansible_env.HOME }}/src"
        accept_hostkey=true
        version="{{ branch | default('master') }}"
@@ -28,8 +28,8 @@
     - on-tools
     - on-imagebuilder
 
-- name: Reset to master
-  shell: git reset --hard master
+- name: Reset to the branch specified
+  shell: git reset --hard { { branch } }
   when: branch is defined
   ignore_errors: yes
   args:
@@ -46,15 +46,7 @@
     - on-tools
     - on-imagebuilder
 
-- name: Reset to the branch specified
-  shell: git reset --hard {{ branch }}
-  when: branch is defined
-  ignore_errors: yes
-  args:
-    chdir: "{{ ansible_env.HOME }}/src/{{ item }}"
-  with_items:
-    - on-http
-
+    
 - name: Npm install Repos
   npm: path="{{ ansible_env.HOME }}/src/{{ item }}"
        production=yes
