* alterations to amqp_source.py to handle first real use-case ** have it decode body's json string ** rename get_tracker_processor to get_tracker_queue_processor (and change all references to it in test_amqp_matchers) ** rename "match_any" to match_any_event (and change all refs to it in test_amqp_matchers) ** add commandline options to allow test-writer to NOT have to wait through setting up and tearing down a test user each time: intended use time is DURING fast iterations used in test dev. *** new option to created a user by name *** new option to use an existing user by name ** changed failed delete of automatic test user to a warning (case in OVA install where rabbitmqctl goes -away- because of the "test") ** added route-key based match-clause to _AMQPMatcher ** fixed main match-greelnet-run logic: *** once test declares they are finished adding matchers, start a tail-timeout (short timeout) and re-start it on each new event handled *** when tail-timeout kicks over, check to see entire match-group would be able to end with success. If so, all done. If not, go back to waiting for an event to reset the tail-timeout again *** OR when the longer overall timeout completes, all done. ** added HACK get_raw_tracker_events. Can be used until we get schema-based validation or at least callback based validation rather than after-the-fact every-coder-for-themselves post-processing. ** much improved logging. * add concept of empty-result batch so amqp-source can check for if -anything- has gone by. * change test_amqp_tracker to use decoded body instead of trying to re-decode it * first-pass adaptation of test/tests/amqp/test_amqp_heartbeat.py ** removed all special server code, espesically the "toss in the air by one thread so the other can notice it with a global" ** created a test for each thing being tested. ** used the new tracker to allow redelivery of observed messages ** fixed incorrect use of ValueError (instead of KeyError) * updated flake8 version in tests * added

--- a/test/Vagrantfile
+++ b/test/Vagrantfile
@@ -12,6 +12,10 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     # RackHD SERVER (Install and start RackHD server)
     config.vm.define "dev" do |target|
         target.vm.box = "bento/ubuntu-16.04"
+        if Vagrant.has_plugin?("vagrant-cachier")
+          config.cache.scope = :box
+        end
+
         target.vm.provider "virtualbox" do |v|
             v.memory = 4096
             v.cpus = 4
@@ -58,6 +62,10 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     # RackHD SERVER TEMPLATE (RackHD installer downloaded but not installed)
     config.vm.define "template", autostart: false do |target|
         target.vm.box = "bento/ubuntu-16.04"
+        if Vagrant.has_plugin?("vagrant-cachier")
+          config.cache.scope = :box
+        end
+
         target.vm.provider "virtualbox" do |v|
             v.memory = 4096
             v.cpus = 4
