--- a/packer/ansible/roles/monorail/files/config.json
+++ b/packer/ansible/roles/monorail/files/config.json
@@ -1,6 +1,7 @@
 {
     "amqp": "amqp://localhost",
     "apiServerAddress": "172.31.128.1",
+    "rackhdPublicIp": null, 
     "apiServerPort": 9080,
     "dhcpGateway": "172.31.128.1",
     "dhcpProxyBindAddress": "172.31.128.1",
