modify packer script for vagrant 0.17

--- a/packer/ansible/roles/mongodb/tasks/main.yml
+++ b/packer/ansible/roles/mongodb/tasks/main.yml
@@ -2,5 +2,9 @@
 - name: Install MongoDB
   apt: pkg={{ item }} state=installed
   with_items:
-    - mongodb
+    - mongodb=1:2.4.9-1ubuntu2
+  sudo: yes
+
+- name: Copy mongodb config file to home directory
+  copy: src=mongodb.conf dest=/etc
   sudo: yes
