--- a/packer/ansible/roles/remoterepos/tasks/main.yml
+++ b/packer/ansible/roles/remoterepos/tasks/main.yml
@@ -17,8 +17,6 @@
   args:
     chdir: "{{ ansible_env.HOME }}/src/{{ item }}"
   with_items:
-    - on-core
-    - on-tasks
     - on-http
     - on-tftp
     - on-dhcp-proxy
@@ -26,7 +24,7 @@
     - on-syslog
     - on-wss
     - on-tools
-    - on-imagebuilder
+    - ucs-service
 
 - name: Reset to the branch specified
   shell: git reset --hard {{ branch }}
@@ -34,8 +32,6 @@
   args:
     chdir: "{{ ansible_env.HOME }}/src/{{ item }}"
   with_items:
-    - on-core
-    - on-tasks
     - on-http
     - on-tftp
     - on-dhcp-proxy
@@ -44,6 +40,7 @@
     - on-wss
     - on-tools
     - on-imagebuilder
+    - ucs-service
 
 - name: Npm install Repos
   npm: path="{{ ansible_env.HOME }}/src/{{ item }}"
@@ -55,6 +52,13 @@
     - on-taskgraph
     - on-http
     - on-wss
+
+- name: Pip install Repos
+  sudo: yes
+  pip: 
+    requirements: "{{ ansible_env.HOME }}/src/{{ item }}/requirements.txt"
+  with_items:
+    - ucs-service
 
 - name: Make common static directory
   file: path="{{ ansible_env.HOME }}/src/on-http/static/http/common" state=directory
